--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="ru" class="show-event-popup">
-  <head><meta charset="utf-8"></head>@@include('blocks/head.html')</head>
-  <body class="body">
-	@@include('blocks/page-header.html')
-	<main class="main">
-    <!--<h2">арт — пространство</h2>
-    <h2>lenni</h2>
-    <h2>для людей, горящих сердцем и деломместо для настоящего</h2> -->
+<html lang="ru">
+
+<head>@@include('blocks/head.html')</head>
+
+<body class="body">
+  @@include('blocks/page-header.html')
+  <main class="main">
+    @@include('blocks/section-title.html')
+    @@include('blocks/about.html')
+    @@include('blocks/events-short.html')
   </main>
-	@@include('blocks/page-footer.html')
-  @@include('blocks/event-pp.html')
-  </body>
+  @@include('blocks/page-footer.html')
+</body>
+
 </html>
