--- a/src/html/blocks/page-footer.html
+++ b/src/html/blocks/page-footer.html
@@ -1,37 +1,41 @@
 <footer class="page-footer">
-    <div class="page-footer__liners"></div>
-    <div class="page-footer__block1">
-        <div class="page-footer__block1-links">
-            <a href="#" class="page-footer__block1-link">Календарь мероприятий</a>
-            <a href="#" class="page-footer__block1-link">Провести мероприятие</a>
-            <a href="#" class="page-footer__block1-link">Стать арендатором</a>
-            <a href="#" class="page-footer__block1-link">Наши проекты</a>
-            <a href="#" class="page-footer__block1-link">Контакты</a>
-        </div>
-        <form class="page-footer__subscribe-form subscribe-form">
-            <h4 class="subscribe-form__title">Подпишись и будь в курсе происходящего</h4>
-            <div class="subscribe-form__wrapper">
-                <div class="subscribe-form__field-wrapper">
-                    <input name="email" type="email" placeholder="Email" class="subscribe-form-input field__input"
-                        required />
-                    <button type="submit" class="subscribe-form__submit ">Подписаться</button>
-                </div>
-                <label class="subscribe-form__check check">
-                    <input name="agree" type="checkbox" class="check__input" required checked />
-                    <span class="check__mark"></span>
-                    <span class="check__label">Согласен на обработку персональных данных</span>
-                </label>
-            </div>
-        </form>
+    <div class="page-footer__first">
+        <div class="page-footer__line"></div>
+        <div class="page-footer__line"></div>
     </div>
-    <div class="page-footer__block2">
-        <div class="page-footer__socials socials">
+    <div class="page-footer__container">
+        <div class="page-footer__list">
+            <a href="#">Календарь мероприятий</a>
+            <a href="#">Провести мероприятие</a>
+            <a href="#">Стать арендатором</a>
+            <a href="#">Наши проекты</a>
+            <a href="#">Контакты</a>
         </div>
-        <div class="page-footer__block2-links">
-            <a href="#" class="page-footer__block2-links">Политика конфиденциальности</a>
-            <a href="#" class="page-footer__block2-links">Cookies</a>
-            <div class="page-footer__copirite">© Millennials 2022</div>
-            <div class="page-footer__create-link">Создание и продвижение
+        <div class="page-footer__check">
+            <p>Подпишись и будь в курсе происходящего</p>
+            <div class="page-footer__buttons">
+                <input
+                    class="page-footer__field-input"
+                    type="email"
+                    placeholder="Email*"
+                    name="Email"
+                    required
+                />
+                <button type="button" class="page-footer__btn">Подписаться</button>
             </div>
+              <label class="check">
+                <input
+                  type="checkbox"
+                  name="agree"
+                  class="check__input"
+                  required
+                  checked
+                />
+               <span class="check__mark"></span>
+               <span class="check__label check__label--s">
+                Согласен на обработку персональных данных
+                </span>
+              </label>
         </div>
+    </div>
 </footer>
