--- a/src/html/blocks/page-header.html
+++ b/src/html/blocks/page-header.html
@@ -1,31 +1,38 @@
 <header class="page-header">
     <div class="page-header__container">
         <a href="index.html" class="page-header__logo">
-            <svg class="page-header__logo-icon" width="202" height="147">
-                <use xlink:href="/assets/icons/logo.svg"></use>
+            <svg class="page-header_logo-icon" width="202" height="147">
+                <use xlink:href="assets/icons/symbols.svg#logo"></use>
             </svg>
-        </a>
+        </a>                   
         <nav class="page-header__nav">
             <a href="events.html" class="page-header__nav-link">Мероприятия</a>
-            <a href="default.html" class="page-header__nav-link">Блог</a>
+            <a href="#" class="page-header__nav-link">Блог</a>
             <a href="#" class="page-header__nav-link">О нас</a>
             <a href="#" class="page-header__nav-link">Контакты</a>
-
-            <a href="#" class="page-header__nav-user-link">
-                Александр С.
-                <svg class="page-header__user-icon" width="24" height="24">
-                    <use xlink:href="/assets/svg-sprite/stafoff.svg"></use>
-                </svg>
-            </a>
+            <div class="page-header__nav-user">
+                <a href="#" class="page-header__nav-user-link">
+                  Александр С.
+                </a>
+                <a href="#" class="page-header__nav-logout">
+                  <svg class="page-header__nav-logout-icon" width="24" height="24">
+                    <use
+                      xlink:href="assets/icons/symbols.svg#stateoff"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
         </nav>
         <div class="page-header__right-block">
-            <a href="#" class="page-header__user-btn btn">Войти</a>
-            <svg class="page-header__user-icon" width="21" height="18">
-                <use xlink:href="assets/icons/usercheck.svg"></use>
-            </svg>
-            <button type="button" class="page-header__nav-toggle" id="js-navToggle">
-                <span class="page-header__nav-toggle-line"></span>
-            </button>
+            <a href="#" class="page-header__user-btn">
+                Войти
+                <svg class="page-header__user-icon" width="21" height="18">
+                    <use
+                      xlink:href="assets/icons/symbols.svg#usercheck"
+                    ></use>
+                  </svg>
+            </a>
+            <button type="button" class="page-header__nav-toggle"></button>
         </div>
     </div>
 </header>
