--- a/src/html/blocks/table.html
+++ b/src/html/blocks/table.html
@@ -1,15 +1,15 @@
-<table class="table @@class events__rariffs-table">
+<table class="events__tariffs-table  table">
     <thead class="table__head">
         <tr class="table__head-tr">
-            <td class="table__head-th"></td>
-            <td class="table__head-th">Тариф «Light»</td>
-            <td class="table__head-th">Тариф «Promo»</td>
-            <td class="table__head-th">Тариф «All stars»</td>
+            <th class="table__th"></th>
+            <th class="table__th">Тариф «Light»</th>
+            <th class="table__th">Тариф «Promo»</th>
+            <th class="table__th">Тариф «All stars»</th>
         </tr>
     </thead>
     <tbody class="table__body">
         <tr class="table__tr">
-            <th class="table__body-th">Стоимость за час</td>
+            <th class="table__body-th">Стоимость за час</th>
             <td class="table__td">1 000 ₽</td>
             <td class="table__td">3 000 ₽</td>
             <td class="table__td">от 6 000 ₽</td>
@@ -18,32 +18,22 @@
             <th class="table__body-th">Ведущий мероприятия</th>
             <td class="table__td"></td>
             <td class="table__td">
-                <svg class="" width="26" height="26">
-                    <use xlink:href="assets/icons/symbols.svg#check"></use>
-                </svg>
+                <span class="ok"></span>
             </td>
             <td class="table__td">
-                <svg class="" width="26" height="26">
-                    <use xlink:href="assets/icons/symbols.svg#check"></use>
-                </svg>
+                <span class="ok"></span>
             </td>
         </tr>
         <tr class="table__tr">
             <th class="table__body-th">Фотосъемка</th>
             <td class="table__td">
-                <svg class="" width="26" height="26">
-                    <use xlink:href="assets/icons/symbols.svg#check"></use>
-                </svg>
+                <span class="ok"></span>
             </td>
             <td class="table__td">
-                <svg class="" width="26" height="26">
-                    <use xlink:href="assets/icons/symbols.svg#check"></use>
-                </svg>
+                <span class="ok"></span>
             </td>
             <td class="table__td">
-                <svg class="" width="26" height="26">
-                    <use xlink:href="assets/icons/symbols.svg#check"></use>
-                </svg>
+                <span class="ok"></span>
             </td>
         </tr>
         <tr class="table__tr">
@@ -51,23 +41,17 @@
             <td class="table__td"></td>
             <td class="table__td"></td>
             <td class="table__td">
-                <svg class="" width="26" height="26">
-                    <use xlink:href="assets/icons/symbols.svg#check"></use>
-                </svg>
+                <span class="ok"></span>
             </td>
         </tr>
         <tr class="table__tr">
             <th class="table__body-th">Организация питания</th>
             <td class="table__td"></td>
             <td class="table__td">
-                <svg class="" width="26" height="26">
-                    <use xlink:href="assets/icons/symbols.svg#check"></use>
-                </svg>
+                <span class="ok"></span>
             </td>
             <td class="table__td">
-                <svg class="" width="26" height="26">
-                    <use xlink:href="assets/icons/symbols.svg#check"></use>
-                </svg>
+                <span class="ok"></span>
             </td>
         </tr>
         <tr class="table__tr">
@@ -75,23 +59,17 @@
             <td class="table__td"></td>
             <td class="table__td"></td>
             <td class="table__td">
-                <svg class="" width="26" height="26">
-                    <use xlink:href="assets/icons/symbols.svg#check"></use>
-                </svg>
+                <span class="ok"></span>
             </td>
         </tr>
         <tr class="table__tr">
             <th class="table__body-th">Звуковое сопровождение</th>
             <td class="table__td"></td>
             <td class="table__td">
-                <svg class="" width="26" height="26">
-                    <use xlink:href="assets/icons/symbols.svg#check"></use>
-                </svg>
+                <span class="ok"></span>
             </td>
             <td class="table__td">
-                <svg class="" width="26" height="26">
-                    <use xlink:href="assets/icons/symbols.svg#check"></use>
-                </svg>
+                <span class="ok"></span>
             </td>
         </tr>
         <tr class="table__tr">
@@ -99,29 +77,26 @@
             <td class="table__td"></td>
             <td class="table__td"></td>
             <td class="table__td">
-                <svg class="" width="26" height="26">
-                    <use xlink:href="assets/icons/symbols.svg#check"></use>
-                </svg>
+                <span class="ok"></span>
             </td>
         </tr>
+
         <tr class="table__tr">
             <th class="table__body-th">Клининг</th>
             <td class="table__td"></td>
             <td class="table__td"></td>
             <td class="table__td">
-                <svg class="" width="26" height="26">
-                    <use xlink:href="assets/icons/symbols.svg#check"></use>
-                </svg>
+                <span class="ok"></span>
             </td>
         </tr>
     </tbody>
+
     <tfoot class="table__footer">
         <tr class="table__footer-tr">
             <th class="table__footer-th"></th>
-            <td class="table__footer-th">Тариф «Light»</td>
-            <td class="table__footer-th">Тариф «Promo»</td>
-            <td class="table__footer-th">Тариф «All stars»</td>
+            <th class="table__footer-th">Тариф «Light»</th>
+            <th class="table__footer-th">Тариф «Promo»</th>
+            <th class="table__footer-th">Тариф «All stars»</th>
         </tr>
     </tfoot>
-
 </table>
